# fmp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
fmp/: CMakeLists.txt
fmp/include/: fmp.hpp
fmp/include/fmp/: algorithm.h  base.h  core.h  lazy.h  predicate.h  type_list.h
fmp_test/: CMakeLists.txt  fmp_test.cpp  fmp_test_FWD.cpp  fmp_test_utils.hpp
